--- a/src/styles/information.css
+++ b/src/styles/information.css
@@ -1,6 +1,8 @@
 .information-conteiner {
-  background-color: #e8dab2;
+  background-color: #c0d6df;
   height: 100vh;
+}
+.target-section {
   display: grid;
   grid-template-columns: auto auto;
   justify-content: space-evenly;
@@ -9,11 +11,87 @@
   margin-top: 50%;
   max-width: 300px;
 }
-.card {
+.card- {
   margin-top: 50%;
   width: 190px;
   height: 254px;
   border-radius: 50px;
   background: #e0e0e0;
   box-shadow: 20px 20px 20px #bebebe, -20px -20px 80px #ffffff;
+}
+.card {
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .target-section {
+    grid-template-columns: auto;
+  }
+  .imagen-autor {
+    display: none;
+  }
+  .card- {
+    display: none;
+  }
+  .card {
+    margin-top: 50%;
+    position: relative;
+    width: 320px;
+    height: 500px;
+    background-color: #dd6e42;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    perspective: 1000px;
+    box-shadow: 0 0 0 5px #ffffff80;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+
+  .card svg {
+    width: 48px;
+    fill: #333;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+
+  .card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
+  }
+
+  .card__content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: rgba(0, 0, 0, 0.329);
+    transform: rotateX(-90deg);
+    transform-origin: bottom;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+
+  .card:hover .card__content {
+    transform: rotateX(0deg);
+  }
+
+  .card__title {
+    margin: 0;
+    font-size: 24px;
+    color: #333;
+    font-weight: 700;
+  }
+
+  .card:hover svg {
+    scale: 0;
+  }
+
+  .card__description {
+    font-size: 18px;
+    color: white;
+    line-height: 1.3;
+  }
 }
