--- a/src/styles/information.css
+++ b/src/styles/information.css
@@ -1,5 +1,5 @@
 .information-conteiner {
-  background-color: #c0d6df;
+  background-color: #e8dab2;
   height: 100vh;
 }
 .target-section {
@@ -9,89 +9,67 @@
 }
 .imagen-autor {
   margin-top: 50%;
-  max-width: 300px;
+  width: 300px;
+  height: 400px;
 }
-.card- {
-  margin-top: 50%;
+.Card {
+  position: relative;
   width: 190px;
   height: 254px;
-  border-radius: 50px;
-  background: #e0e0e0;
-  box-shadow: 20px 20px 20px #bebebe, -20px -20px 80px #ffffff;
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  padding: 12px;
+  gap: 12px;
+  border-radius: 8px;
+  cursor: pointer;
 }
-.card {
-  display: none;
+
+.Card::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  left: -5px;
+  margin: auto;
+  width: 200px;
+  height: 264px;
+  border-radius: 10px;
+  background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100%);
+  z-index: -10;
+  pointer-events: none;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-@media only screen and (max-width: 600px) {
-  .target-section {
-    grid-template-columns: auto;
-  }
-  .imagen-autor {
-    display: none;
-  }
-  .card- {
-    display: none;
-  }
-  .card {
-    margin-top: 50%;
-    position: relative;
-    width: 320px;
-    height: 500px;
-    background-color: #dd6e42;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    perspective: 1000px;
-    box-shadow: 0 0 0 5px #ffffff80;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  }
+.Card::after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100%);
+  transform: translate3d(0, 0, 0) scale(0.95);
+  filter: blur(20px);
+}
 
-  .card svg {
-    width: 48px;
-    fill: #333;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  }
+.heading {
+  font-size: 20px;
+  text-transform: capitalize;
+  font-weight: 700;
+}
 
-  .card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
-  }
+.Card p:not(.heading) {
+  font-size: 14px;
+}
 
-  .card__content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: rgba(0, 0, 0, 0.329);
-    transform: rotateX(-90deg);
-    transform-origin: bottom;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  }
+.Card p:last-child {
+  color: #e81cff;
+  font-weight: 600;
+}
 
-  .card:hover .card__content {
-    transform: rotateX(0deg);
-  }
+.Card:hover::after {
+  filter: blur(30px);
+}
 
-  .card__title {
-    margin: 0;
-    font-size: 24px;
-    color: #333;
-    font-weight: 700;
-  }
-
-  .card:hover svg {
-    scale: 0;
-  }
-
-  .card__description {
-    font-size: 18px;
-    color: white;
-    line-height: 1.3;
-  }
+.Card:hover::before {
+  transform: rotate(-90deg) scaleX(1.34) scaleY(0.77);
 }
