--- a/src/styles/information.css
+++ b/src/styles/information.css
@@ -5,71 +5,30 @@
 .target-section {
   display: grid;
   grid-template-columns: auto auto;
-  justify-content: space-evenly;
+  height: 100vh;
+  align-items: center; /* Centra verticalmente los elementos */
 }
 .imagen-autor {
-  margin-top: 50%;
-  width: 300px;
-  height: 400px;
+  margin-left: 8%;
+  width: 90%; /* La imagen ocupa el ancho de su celda */
+  height: 70%; /* Ajusta la altura automáticamente */
+  object-fit: cover;
 }
-.Card {
-  position: relative;
-  width: 190px;
-  height: 254px;
-  background-color: #000;
+.information-content {
+  background-color: #c0d6df;
   display: flex;
   flex-direction: column;
-  justify-content: end;
-  padding: 12px;
-  gap: 12px;
-  border-radius: 8px;
-  cursor: pointer;
+  justify-content: center;
+  width: 80%;
+  height: 65%;
+}
+.information-title {
+  font-size: 24px;
+
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
-.Card::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  left: -5px;
-  margin: auto;
-  width: 200px;
-  height: 264px;
-  border-radius: 10px;
-  background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100%);
-  z-index: -10;
-  pointer-events: none;
-  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-.Card::after {
-  content: "";
-  z-index: -1;
-  position: absolute;
-  inset: 0;
-  background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100%);
-  transform: translate3d(0, 0, 0) scale(0.95);
-  filter: blur(20px);
-}
-
-.heading {
-  font-size: 20px;
-  text-transform: capitalize;
-  font-weight: 700;
-}
-
-.Card p:not(.heading) {
-  font-size: 14px;
-}
-
-.Card p:last-child {
-  color: #e81cff;
-  font-weight: 600;
-}
-
-.Card:hover::after {
-  filter: blur(30px);
-}
-
-.Card:hover::before {
-  transform: rotate(-90deg) scaleX(1.34) scaleY(0.77);
+.information-description {
+  padding: 10px;
 }
