--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -8,65 +8,88 @@
   place-items: center;
   align-content: center;
 }
-.flecha {
-  max-width: 40px;
-}
-
 .button {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: #dd6e42;
-  border: none;
-  font-weight: 600;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
-  cursor: pointer;
-  transition-duration: 0.3s;
-  overflow: hidden;
+  display: block;
   position: relative;
+  width: 56px;
+  height: 56px;
+  margin: 0;
+  overflow: hidden;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+  border: 0;
 }
 
-.svgIcon {
-  width: 12px;
-  transition-duration: 0.3s;
-}
-
-.svgIcon path {
-  fill: white;
-}
-
-.button:hover {
-  width: 140px;
-  border-radius: 50px;
-  transition-duration: 0.3s;
-  background-color: #aeaeae;
-  align-items: center;
-}
-
-.button:hover .svgIcon {
-  /* width: 20px; */
-  transition-duration: 0.3s;
-  transform: translateY(200%);
-}
-.arrow-down {
-  transform: rotate(180deg); /* Rota la flecha hacia abajo */
-}
-.button::before {
+.button:before,
+.button:after {
+  content: "";
   position: absolute;
-  bottom: -20px;
-  content: "Mas Info";
-  color: white;
-  /* transition-duration: .3s; */
-  font-size: 0px;
+  border-radius: 50%;
+  inset: 7px;
 }
 
-.button:hover::before {
-  font-size: 13px;
+.button:before {
+  border: 4px solid #dd6e42;
+  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
+}
+
+.button:after {
+  border: 4px solid #dd6e42;
+  transform: scale(1.3);
+  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
+    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  opacity: 0;
+}
+
+.button:hover:before,
+.button:focus:before {
+  opacity: 0;
+  transform: scale(0.7);
+  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
+    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.button:hover:after,
+.button:focus:after {
   opacity: 1;
-  bottom: unset;
-  /* transform: translateY(-30px); */
-  transition-duration: 0.3s;
+  transform: scale(1);
+  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
+}
+
+.button-box {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: transform 0.4s ease;
+}
+
+.button-elem {
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin: 17px 18px 0 18px;
+  transform: rotate(180deg);
+  fill: #c0d6df;
+}
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(5px);
+  } /* Baja 10px */
+  100% {
+    transform: translateY(0);
+  } /* Vuelve a la posición original */
+}
+.button:hover .button-box,
+.button:focus .button-box {
+  animation: bounce 0.8s ease-in-out;
+}
+.rotate-down {
+  transform: rotate(270deg);
 }
