--- a/src/styles/proyect.css
+++ b/src/styles/proyect.css
@@ -1,25 +1,43 @@
-.target-proyect {
-  background-color: #4f6d7a;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  justify-content: space-evenly;
-  height: 100vh;
+:root {
+  --primary-color: #c0d6df;
+  --secondary-color: #dd6e42;
+  --background-color-page: #e8dab2;
+  --target-button: #4f6d7a;
+  --shaded-background: #4f6d7ada;
 }
-
+.title {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: var(--secondary-color);
+  position: absolute;
+}
+.target-project {
+  display: grid;
+  grid-template-columns: auto auto;
+  background-color: var(--background-color-page);
+}
+.tilte-proyect {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-align: center;
+  place-content: center;
+  margin: 0 auto;
+  height: 100%;
+  width: 100%;
+  background-color: var(--shaded-background);
+  color: var(--secondary-color);
+}
 .card-proyect {
-  background-image: url("../assets/proyects/registro-datos.jpg");
+  background-image: url("../assets/projects/citas-aleatorias.jpg");
   background-size: contain;
   margin-top: 40vh;
-  position: relative;
   width: 300px;
   height: 200px;
   border-radius: 10px;
-  display: flex;
   align-items: center;
-  justify-content: center;
   overflow: hidden;
   perspective: 1000px;
-  box-shadow: 0 0 0 5px #e8dab2;
+  box-shadow: 0 0 0 5px var(--secondary-color);
   transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
@@ -42,7 +60,7 @@
   height: 100%;
   padding: 20px;
   box-sizing: border-box;
-  background-color: #e8dab2;
+  background-color: var(--target-button);
   transform: rotateX(-90deg);
   transform-origin: bottom;
   transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -55,7 +73,7 @@
 .card__title-proyect {
   margin: 0;
   font-size: 24px;
-  color: white;
+  color: var(--primary-color);
   font-weight: 700;
 }
 
@@ -66,6 +84,6 @@
 .card__description-proyect {
   margin: 10px 0 0;
   font-size: 14px;
-  color: white;
+  color: var(--primary-color);
   line-height: 1.4;
 }
