--- a/src/styles/information.css
+++ b/src/styles/information.css
@@ -6,7 +6,6 @@
 }
 
 .information-conteiner {
-  background-color: var(--background-color-page);
   height: 100vh;
 }
 .target-section {
@@ -24,13 +23,13 @@
   border-radius: 40px;
 }
 .information-content {
-  width: 80%;
-  height: 70%;
+  width: 75vh;
+  height: 70vh;
   background: var(--target-button);
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1em;
+  font-size: 1.15em;
   color: var(--background-color-page);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   border-radius: 40px;
@@ -57,7 +56,7 @@
 
 .information-text {
   padding: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 50px;
   z-index: 2;
   transition: all 0.9s ease-in-out;
 }
