--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-color: #c0d6df;
+  --secondary-color: #dd6e42;
+  --background-color-page: #e8dab2;
+  --target-button: #4f6d7a;
+}
 .hero-section {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -30,13 +36,13 @@
 }
 
 .button:before {
-  border: 4px solid #dd6e42;
+  border: 4px solid var(--secondary-color);
   transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
     transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
 }
 
 .button:after {
-  border: 4px solid #dd6e42;
+  border: 4px solid var(--secondary-color);
   transform: scale(1.3);
   transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
     transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
@@ -73,7 +79,7 @@
   height: 20px;
   margin: 17px 18px 0 18px;
   transform: rotate(180deg);
-  fill: #c0d6df;
+  fill: #ffff;
 }
 @keyframes bounce {
   0% {
