--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -11,7 +11,7 @@
   color: var(--secondary-color);
   font-size: 40px;
   position: absolute;
-  left: 45%;
+  left: 7%;
   top: 205%;
 }
 .projects-container {
@@ -30,7 +30,7 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-align: center;
   place-content: center;
-  margin-top: 20%;
+  margin-top: 25%;
   height: 30%;
   width: 100%;
   background-color: var(--secondary-color);
@@ -38,8 +38,8 @@
 }
 .card-proyect {
   background-size: contain;
-  width: 300px;
-  height: 200px;
+  width: 350px;
+  height: 250px;
   border-radius: 10px;
   align-items: center;
   overflow: hidden;
@@ -88,12 +88,16 @@
   scale: 0;
 }
 .card__description-proyect {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 10px 0 0;
   font-size: 14px;
   color: #ffff;
   line-height: 1.4;
 }
 .card__link {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #ffff;
 }
 .projects-container-movil {
