--- a/src/styles/studies.css
+++ b/src/styles/studies.css
@@ -3,15 +3,37 @@
   --secondary-color: #dd6e42;
   --background-color-page: #e8dab2;
   --target-button: #4f6d7a;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+
 .conteiner-studies {
-  height: 100vh;
+  height: 97vh;
+}
+.text-conteiner-studies {
+  background-color: var(--target-button);
+  width: 80%;
+  margin: auto;
+  border-radius: 40px;
+}
+.title-studies {
+  color: var(--background-color-page);
+  font-size: 40px;
+  margin: 2%;
+}
+.description-studies {
+  font-size: 1.2em;
+  text-align: center;
+  margin-top: 2%;
+  margin-left: 10%;
+  padding-bottom: 2%;
+  width: 80%;
+  color: var(--background-color-page);
 }
 .conteiner-icon-studies {
   display: flex;
-  gap: 99px;
+  gap: 5vh;
   justify-content: center;
-  margin-top: 4%;
+  margin-top: 6%;
 }
 .logo-studies-html,
 .logo-studies-css,
@@ -21,19 +43,19 @@
 .logo-studies-bootstrap,
 .logo-studies-sass,
 .logo-studies-github {
-  max-width: 70px;
+  max-width: 80px;
 }
 
 .conteiner-certificates {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto auto;
   justify-content: space-evenly;
   margin-top: 5%;
 }
 .certificates-studies {
   cursor: pointer;
   margin-top: 20px;
-  max-width: 300px;
+  max-width: 280px;
   transition: transform 0.2s ease;
 }
 .certificates-studies:hover {
@@ -67,7 +89,6 @@
   border: none;
   background: rgba(180, 83, 107, 0.11);
   border-radius: 5px;
-  transition: background 0.5s;
 }
 .close-certificate:hover {
   background-color: rgb(211, 21, 21);
