--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -4,43 +4,66 @@
   --background-color-page: #e8dab2;
   --target-button: #4f6d7a;
 }
+
 .content-conctact {
   height: 100vh;
 }
+.content-conctact-text {
+  width: 85%;
+  margin-left: 7%;
+  border-radius: 40px;
+  background-color: var(--target-button);
+  color: var(--background-color-page);
+}
 .title-contact {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  color: var(--secondary-color);
   font-size: 40px;
   margin: 2%;
 }
 .text-descriptions-contact {
-  font-size: 1.2em;
+  font-size: 1em;
   text-align: center;
-  margin-top: 2%;
-  margin-left: 10%;
+  margin: auto;
   padding-bottom: 2%;
   width: 80%;
-  color: var(--secondary-color);
 }
 .card-icon-contact {
   display: flex;
-  height: 70px;
-  width: 270px;
+  place-content: center;
+  margin-top: 25vh;
+  gap: 5vh;
+  height: 50vh;
 }
 
 .card-icon-contact svg {
   position: absolute;
-  display: flex;
-  width: 60%;
-  height: 100%;
-  font-size: 24px;
+  width: 70%;
+  height: 70%;
   font-weight: 700;
   opacity: 1;
   transition: opacity 0.25s;
   z-index: 2;
   cursor: pointer;
 }
-
+.name-contact-social {
+  margin-top: 22vh;
+}
+.social-link1 {
+  height: 15vh;
+  width: 15vh;
+}
+.social-link3 {
+  height: 15vh;
+  width: 15vh;
+}
+.social-link2 {
+  height: 15vh;
+  width: 15vh;
+}
+.social-link4 {
+  height: 15vh;
+  width: 15vh;
+}
 .card-icon-contact .social-link1,
 .card-icon-contact .social-link2,
 .card-icon-contact .social-link3,
@@ -49,12 +72,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 25%;
-  color: whitesmoke;
+
+  color: white;
   font-size: 24px;
   text-decoration: none;
   transition: 0.25s;
-  border-radius: 50px;
+  border-radius: 100px;
 }
 
 .card-icon-contact svg {
@@ -122,4 +145,15 @@
   100% {
     transform: scale(1);
   }
+}
+
+.content-conctact-footer {
+  height: 1px;
+  background-color: var(--secondary-color);
+  border: none;
+}
+.content-conctact-footer-text {
+  text-align: center;
+  display: grid;
+  margin-top: 3vh;
 }
