--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -6,33 +6,41 @@
 }
 
 .content-conctact {
-  height: 100vh;
+  height: 80vh;
 }
 .content-conctact-text {
   width: 85%;
   margin-left: 7%;
   border-radius: 40px;
-  background-color: var(--target-button);
-  color: var(--background-color-page);
 }
 .title-contact {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 40px;
-  margin: 2%;
+  position: absolute;
+  left: 7%;
+  top: 405%;
+  color: white;
+  border-bottom: 2px var(--secondary-color) solid;
+  width: 5%;
+  padding: 2px;
 }
 .text-descriptions-contact {
-  font-size: 1em;
+  color: rgb(255, 255, 255);
+  font-size: 1.3em;
   text-align: center;
-  margin: auto;
-  padding-bottom: 2%;
-  width: 80%;
+  margin-left: 15%;
+  margin-top: 2%;
+  padding-bottom: 10%;
+  width: 70%;
+}
+.text-descriptions-contact-title {
+  color: var(--secondary-color);
 }
 .card-icon-contact {
   display: flex;
   place-content: center;
-  margin-top: 25vh;
-  gap: 5vh;
-  height: 50vh;
+  gap: 10vh;
+  height: 35vh;
 }
 
 .card-icon-contact svg {
@@ -50,6 +58,7 @@
 }
 .social-link1 {
   height: 15vh;
+
   width: 15vh;
 }
 .social-link3 {
@@ -148,12 +157,19 @@
 }
 
 .content-conctact-footer {
-  height: 1px;
+  height: 1.5px;
   background-color: var(--secondary-color);
   border: none;
+  margin-top: 10vh;
 }
 .content-conctact-footer-text {
-  text-align: center;
-  display: grid;
-  margin-top: 3vh;
+  color: white;
+
+  display: flex;
+  gap: 5px;
+  margin-top: 2vh;
+  justify-content: center;
+}
+.content-conctact-footer-text-name {
+  color: var(--secondary-color);
 }
