--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -8,12 +8,12 @@
 .title {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: var(--background-color-page);
-  background-color: var(--shaded-background);
+  color: white;
+  border-bottom: 2px var(--secondary-color) solid;
+  width: 5%;
   font-size: 40px;
-  padding: 5px;
+  padding: 2px;
   position: absolute;
-  border-radius: 10px;
   left: 7%;
   top: 205%;
 }
@@ -107,28 +107,30 @@
   margin-top: 10px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: var(--secondary-color);
-  background-color: var(--shaded-background);
-  border-radius: 10px;
+  color: var(--background-color-page);
+  border-bottom: 2px var(--background-color-page) solid;
   padding: 5px;
   text-decoration: none;
 }
 .card__link_app:hover {
   color: white;
+  border-bottom: 2px white solid;
+
   transition: 0.3s;
 }
 .card__link_code {
   margin-top: 10px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: var(--secondary-color);
-  background-color: var(--shaded-background);
-  border-radius: 10px;
+  color: var(--background-color-page);
+  border-bottom: 2px var(--background-color-page) solid;
+
   padding: 5px;
   text-decoration: none;
 }
 .card__link_code:hover {
   color: white;
+  border-bottom: 2px white solid;
   transition: 0.3s;
 }
 .projects-container-movil {
