--- a/src/styles/studies.css
+++ b/src/styles/studies.css
@@ -10,27 +10,32 @@
   height: 100vh;
 }
 .text-conteiner-studies {
-  background-color: var(--target-button);
   width: 85%;
   margin-left: 7%;
   border-radius: 40px;
 }
 .title-studies {
-  color: var(--background-color-page);
+  width: 5%;
+  padding: 2px;
+  position: absolute;
+  left: 7%;
+  top: 303%;
   font-size: 40px;
-  margin: 2%;
+  color: white;
+  border-bottom: 2px var(--secondary-color) solid;
 }
 .description-studies {
-  font-size: 1em;
+  color: white;
+  font-size: 1.1em;
   text-align: center;
-  margin: auto;
+  margin-left: 10%;
+  margin-top: 9%;
   padding-bottom: 2%;
   width: 80%;
-  color: var(--background-color-page);
 }
 .conteiner-icon-studies {
   display: flex;
-  gap: 5vh;
+  gap: 10vh;
   justify-content: center;
   margin-top: 6%;
 }
@@ -42,7 +47,7 @@
 .logo-studies-bootstrap,
 .logo-studies-sass,
 .logo-studies-github {
-  max-width: 80px;
+  max-width: 50px;
 }
 
 .conteiner-certificates {
