--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,8 @@ body {
   text-align: center;
   color: var(--secondary-color);
 }
+@media only screen and (max-width: 600px) {
+  body {
+    display: none;
+  }
+}
