--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -136,6 +136,7 @@
 .projects-container-movil {
   display: none;
 }
+/*--------- VISTA MOVIL---------------*/
 @media only screen and (max-width: 600px) {
   .projects-container {
     display: none;
@@ -144,95 +145,74 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
       Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
       sans-serif;
-    color: var(--secondary-color);
+    color: white;
+    border-bottom: 2px var(--secondary-color) solid;
+    width: 5%;
     font-size: 40px;
+    padding: 2px;
     position: absolute;
-    left: 30%;
+    left: 7%;
     top: 205%;
   }
   .projects-container-movil {
     margin: 0 auto;
     place-content: center;
     height: 100vh;
-
     display: grid;
     grid-template-columns: auto auto;
     justify-content: space-evenly;
   }
   .target-project-movil {
-    margin-top: 8vh;
+    margin: 2vh;
   }
   .tilte-proyect-movil {
+    display: grid;
+    text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
       Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
       sans-serif;
-    text-align: center;
-    place-content: center;
-    margin-top: 35%;
-    height: 30%;
-    width: 100%;
-    background-color: var(--secondary-color);
+    background-color: #dd6e42;
     color: #ffff;
+    margin-top: 50px;
   }
   .card-proyect-movil {
     background-size: cover;
-    width: 150px;
+    width: 170px;
     height: 150px;
     border-radius: 10px;
     align-items: center;
     overflow: hidden;
-    perspective: 1000px;
-    box-shadow: 0 0 0 5px var(--secondary-color);
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   }
 
-  .card-proyect-movil svg {
-    width: 48px;
-    fill: #333;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  .card_link_project_movil {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-evenly;
   }
-
-  .card-proyect-movil:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px #4f6d7a;
+  .card__link_app_movil {
+    font-size: 13px;
+    margin-top: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+    color: white;
+    border-bottom: 2px var(--background-color-page) solid;
+    background-color: #dd6e42;
+    text-decoration: none;
+    padding: 3px;
+    border-radius: 5px;
   }
-
-  .card__content-proyect-movil {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: var(--secondary-color);
-    transform: rotateX(-90deg);
-    transform-origin: bottom;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  }
-
-  .card-proyect-movil:hover .card__content-proyect-movil {
-    transform: rotateX(0deg);
-  }
-
-  .card__title-proyect-movil {
-    margin: 0;
-    font-size: 24px;
-    color: #ffff;
-    font-weight: 700;
-  }
-
-  .card-proyect-movil:hover svg {
-    scale: 0;
-  }
-
-  .card__description-proyect-movil {
-    margin: 10px 0 0;
-    font-size: 14px;
-    color: #ffff;
-    line-height: 1.4;
-  }
-  .card__link-movil {
-    color: #ffff;
+  .card__link_code_movil {
+    font-size: 13px;
+    border-radius: 5px;
+    padding: 3px;
+    background-color: #dd6e42;
+    margin-top: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+    color: white;
+    border-bottom: 2px var(--background-color-page) solid;
+    text-decoration: none;
   }
 }
