--- a/src/styles/studies.css
+++ b/src/styles/studies.css
@@ -12,7 +12,6 @@
 .text-conteiner-studies {
   width: 85%;
   margin-left: 7%;
-  border-radius: 40px;
 }
 .title-studies {
   width: 5%;
@@ -28,7 +27,7 @@
   color: white;
   font-size: 1.1em;
   text-align: center;
-  margin-left: 10%;
+  margin: auto;
   margin-top: 9%;
   padding-bottom: 2%;
   width: 80%;
@@ -96,4 +95,46 @@
 }
 .close-certificate:hover {
   background-color: rgb(211, 21, 21);
+}
+@media only screen and (max-width: 600px) {
+  .text-conteiner-studies {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 20%;
+  }
+  .description-studies {
+    color: white;
+    font-size: 1.1em;
+    text-align: center;
+    width: 95%;
+  }
+  .conteiner-icon-studies {
+    display: flex;
+    gap: 2vh;
+    justify-content: center;
+    margin-top: 6%;
+  }
+  .logo-studies-html,
+  .logo-studies-css,
+  .logo-studies-js,
+  .logo-studies-react,
+  .logo-studies-node,
+  .logo-studies-bootstrap,
+  .logo-studies-sass,
+  .logo-studies-github {
+    max-width: 35px;
+  }
+
+  .conteiner-certificates {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-evenly;
+    margin-top: 5%;
+  }
+  .certificates-studies {
+    cursor: pointer;
+    margin-top: 10px;
+    max-width: 200px;
+    transition: transform 0.2s ease;
+  }
 }
