--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -152,7 +152,7 @@
     padding: 2px;
     position: absolute;
     left: 7%;
-    top: 205%;
+    top: 209%;
   }
   .projects-container-movil {
     margin: 0 auto;
@@ -163,7 +163,7 @@
     justify-content: space-evenly;
   }
   .target-project-movil {
-    margin: 2vh;
+    margin-top: 4vh;
   }
   .tilte-proyect-movil {
     display: grid;
@@ -213,7 +213,6 @@
       Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
       sans-serif;
     color: white;
-
     text-decoration: none;
   }
 }
