--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -115,7 +115,6 @@
 .card__link_app:hover {
   color: white;
   border-bottom: 2px white solid;
-
   transition: 0.3s;
 }
 .card__link_code {
@@ -124,7 +123,6 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: var(--background-color-page);
   border-bottom: 2px var(--background-color-page) solid;
-
   padding: 5px;
   text-decoration: none;
 }
@@ -136,10 +134,16 @@
 .projects-container-movil {
   display: none;
 }
-/*--------- VISTA MOVIL---------------*/
+
 @media only screen and (max-width: 600px) {
   .projects-container {
     display: none;
+  }
+  .projects-container-movil {
+    height: 100vh;
+    display: grid;
+  }
+  .conteiner-title-project {
   }
   .title-movil {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -150,39 +154,30 @@
     width: 5%;
     font-size: 40px;
     padding: 2px;
-    position: absolute;
-    left: 7%;
-    top: 209%;
   }
-  .projects-container-movil {
-    margin: 0 auto;
-    place-content: center;
-    height: 100vh;
+  .conteiner-project-card-movil {
     display: grid;
     grid-template-columns: auto auto;
     justify-content: space-evenly;
   }
-  .target-project-movil {
-    margin-top: 4vh;
-  }
-  .tilte-proyect-movil {
-    display: grid;
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-      sans-serif;
-    background-color: #dd6e42;
-    color: #ffff;
-    margin-top: 45px;
-    padding: 5px;
-  }
   .card-proyect-movil {
+    display: grid;
     background-size: cover;
     width: 170px;
     height: 150px;
     border-radius: 10px;
     align-items: center;
     overflow: hidden;
+  }
+  .tilte-proyect-movil {
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+    background-color: #dd6e42;
+    color: #ffff;
+    margin-top: 15px;
+    padding: 5px;
   }
 
   .card_link_project_movil {
@@ -197,7 +192,6 @@
       Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
       sans-serif;
     color: white;
-
     background-color: #dd6e42;
     text-decoration: none;
     padding: 3px;
