Actualizando vista movil

--- a/src/styles/studies.css
+++ b/src/styles/studies.css
@@ -9,26 +9,26 @@
 .conteiner-studies {
   height: 100vh;
 }
-.text-conteiner-studies {
-  width: 85%;
-  margin-left: 7%;
-}
 .title-studies {
-  width: 5%;
+  display: grid;
+  width: 3%;
+  margin-top: 2%;
   padding: 2px;
-  position: absolute;
-  left: 7%;
-  top: 303%;
   font-size: 40px;
   color: white;
   border-bottom: 2px var(--secondary-color) solid;
 }
+.text-conteiner-studies {
+  width: 85%;
+  margin-left: 7%;
+}
+
 .description-studies {
   color: white;
   font-size: 1.1em;
   text-align: center;
   margin: auto;
-  margin-top: 9%;
+  margin-top: 3%;
   padding-bottom: 2%;
   width: 80%;
 }
@@ -134,7 +134,7 @@
   .certificates-studies {
     cursor: pointer;
     margin-top: 10px;
-    max-width: 200px;
+    max-width: 170px;
     transition: transform 0.2s ease;
   }
 }
