Actualizando vista movil.

--- a/src/styles/studies.css
+++ b/src/styles/studies.css
@@ -11,7 +11,7 @@
 }
 .title-studies {
   display: grid;
-  width: 3%;
+  width: 5%;
   margin-top: 2%;
   padding: 2px;
   font-size: 40px;
@@ -20,7 +20,7 @@
 }
 .text-conteiner-studies {
   width: 85%;
-  margin-left: 7%;
+  margin: auto;
 }
 
 .description-studies {
@@ -122,7 +122,7 @@
   .logo-studies-bootstrap,
   .logo-studies-sass,
   .logo-studies-github {
-    max-width: 35px;
+    max-width: 30px;
   }
 
   .conteiner-certificates {
