--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -6,30 +6,27 @@
 }
 
 .content-conctact {
-  height: 80vh;
-}
-.content-conctact-text {
-  width: 85%;
-  margin-left: 7%;
-  border-radius: 40px;
+  height: 100vh;
 }
 .title-contact {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  display: grid;
+  margin-top: 2%;
   font-size: 40px;
-  position: absolute;
-  left: 7%;
-  top: 405%;
   color: white;
   border-bottom: 2px var(--secondary-color) solid;
   width: 5%;
   padding: 2px;
 }
+.content-conctact-text {
+  width: 85%;
+  margin: auto;
+}
+
 .text-descriptions-contact {
   color: rgb(255, 255, 255);
   font-size: 1.3em;
   text-align: center;
-  margin-top: 2%;
-  padding-bottom: 10%;
+  margin-top: 3%;
   width: 100%;
 }
 .text-descriptions-contact-title {
@@ -37,6 +34,7 @@
 }
 .card-icon-contact {
   display: flex;
+  margin-top: 10%;
   place-content: center;
   gap: 10vh;
   height: 35vh;
@@ -44,8 +42,8 @@
 
 .card-icon-contact svg {
   position: absolute;
-  width: 70%;
-  height: 70%;
+  width: 75%;
+  height: 75%;
   font-weight: 700;
   opacity: 1;
   transition: opacity 0.25s;
@@ -157,7 +155,7 @@
   height: 1.5px;
   background-color: var(--secondary-color);
   border: none;
-  margin-top: 10vh;
+  margin-top: 17vh;
 }
 .content-conctact-footer-text {
   color: white;
@@ -170,28 +168,19 @@
   color: var(--secondary-color);
 }
 @media only screen and (max-width: 600px) {
-  .title-contact {
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-      sans-serif;
-    font-size: 40px;
-    left: 4%;
-    top: 400%;
-  }
   .content-conctact-text {
-    width: 100%;
+    width: 97%;
     margin-left: 0%;
   }
   .text-descriptions-contact {
-    width: 95%;
     padding: 8px;
-    margin-top: 2%;
-    padding-bottom: 10%;
+    margin-top: 8%;
   }
   .card-icon-contact {
     display: grid;
     grid-template-columns: auto auto;
+    margin-top: 10vh;
     gap: 5vh;
-    height: 30vh;
   }
   .name-contact-social {
     margin-top: 21vh;
