--- a/src/styles/information.css
+++ b/src/styles/information.css
@@ -52,8 +52,8 @@
 }
 
 .information-text {
-  padding: 20px;
-  margin-bottom: 50px;
+  padding: 5%;
+  margin-top: 0px;
   z-index: 2;
   transition: all 0.9s ease-in-out;
 }
