--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -145,15 +145,14 @@
   }
   .conteiner-title-project {
   }
-  .title-movil {
+  .title-movil-project {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
       Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
       sans-serif;
     color: white;
-    border-bottom: 2px var(--secondary-color) solid;
-    width: 5%;
     font-size: 40px;
     padding: 2px;
+    margin-left: 3%;
   }
   .conteiner-project-card-movil {
     display: grid;
