--- a/src/styles/informationMovil.css
+++ b/src/styles/informationMovil.css
@@ -1,4 +1,7 @@
 @media only screen and (max-width: 600px) {
+  .information-conteiner {
+    height: 95vh;
+  }
   .information-content {
     display: none;
   }
