--- a/src/styles/studies.css
+++ b/src/styles/studies.css
@@ -97,6 +97,12 @@
   background-color: rgb(211, 21, 21);
 }
 @media only screen and (max-width: 600px) {
+  .conteiner-studies {
+    height: 85vh;
+  }
+  .title-studies {
+    border-bottom: none;
+  }
   .text-conteiner-studies {
     width: 100%;
     margin-left: 0;
