vista movil cambiada

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -177,7 +177,7 @@
   }
   .title-contact {
     display: grid;
-    margin-top: 0px;
+    margin-top: 6%;
     border-bottom: none;
     width: 100%;
     padding: 2px;
