--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -1,13 +1,12 @@
 :root {
   --primary-color: #c0d6df;
   --secondary-color: #dd6e42;
-
   --target-button: #4f6d7a;
 }
 .hero-section {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-image: url("../assets/IMG-20230730-WA0059.jpg");
+  background-image: url("../assets/foto.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
