--- a/src/styles/studies.css
+++ b/src/styles/studies.css
@@ -10,15 +10,15 @@
 }
 .title-studies {
   display: grid;
-  width: 5%;
-  margin: 5px;
-  padding: 2px;
+  margin-top: 2%;
   font-size: 40px;
   color: white;
   border-bottom: 2px var(--secondary-color) solid;
+  width: 5%;
+  padding: 2px;
 }
 .text-conteiner-studies {
-  width: 100%;
+  width: 85%;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -37,7 +37,7 @@
   display: flex;
   gap: 10vh;
   justify-content: center;
-  margin-top: 6%;
+  margin-top: 10%;
 }
 .logo-studies-html,
 .logo-studies-css,
@@ -101,7 +101,18 @@
   .conteiner-studies {
     height: 85vh;
   }
-
+  .text-conteiner-studies {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+  }
+  .title-studies {
+    border-bottom: none;
+    width: 100%;
+    padding: 2px;
+  }
   .description-studies {
     color: white;
     text-align: center;
@@ -111,7 +122,7 @@
     display: flex;
     gap: 2vh;
     justify-content: center;
-    margin-top: 18%;
+    margin-top: 10%;
   }
   .logo-studies-html,
   .logo-studies-css,
@@ -128,7 +139,7 @@
     display: grid;
     grid-template-columns: auto auto;
     justify-content: space-evenly;
-    margin-top: 5%;
+    margin-top: 10%;
   }
   .certificates-studies {
     cursor: pointer;
