--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -24,15 +24,14 @@
   grid-template-columns: auto auto auto;
   justify-content: space-evenly;
 }
-.target-project {
-  margin-top: 5vh;
-}
+
 .tilte-proyect {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  text-align: center;
-  place-content: center;
-  margin-top: 25%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 20%;
   height: 30%;
   width: 100%;
   background-color: var(--secondary-color);
@@ -140,6 +139,7 @@
   }
   .projects-container-movil {
     height: 80vh;
+
     display: grid;
   }
 
