--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -6,7 +6,7 @@
 .hero-section {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-image: url("../assets/foto.webp");
+  background-image: url("../assets/foto kevin.webp");
   background-size: cover;
   background-position: center;
   height: 100vh;
