--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -113,5 +113,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-image: url("../assets/foto kevin 2.webp");
   }
 }
