--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -1,23 +1,14 @@
-:root {
-  --primary-color: #c0d6df;
-  --secondary-color: #dd6e42;
-  --target-button: #4f6d7a;
+.intro {
+  display: flex;
+  flex-direction: column;
 }
-.hero-section {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-image: url("../assets/foto kevin.webp");
-  background-size: cover;
-  background-position: center;
+.photo {
   height: 100vh;
-  place-items: center;
-  align-content: center;
+  width: 100%;
+  object-fit: cover;
 }
-.text-name {
-  margin: 0 auto;
-  text-align: center;
-  color: #ffff;
-  font-size: 20px;
+.text-intro {
+  margin: -50vh;
 }
 .name-profession {
   text-align: center;
