--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -1,104 +1,31 @@
 .intro {
   display: flex;
   flex-direction: column;
+  justify-content:center;
+ overflow: hidden;
+
 }
 .photo {
+  position: absolute;
   height: 100vh;
-  width: 100%;
+  width:100%;
   object-fit: cover;
+  z-index: 1;
 }
 .text-intro {
-  margin: -50vh;
-}
-.name-profession {
-  text-align: center;
-  color: var(--secondary-color);
-}
-.button {
-  display: block;
-  position: relative;
-  width: 56px;
-  height: 56px;
-  margin: 0;
-  overflow: hidden;
-  outline: none;
-  background-color: transparent;
-  cursor: pointer;
-  border: 0;
+    position:relative;
+    color:White;
+    text-align: center;
+    place-content: end;
+    height: 90vh;
+ z-index: 2;
+
 }
 
-.button:before,
-.button:after {
-  content: "";
-  position: absolute;
-  border-radius: 50%;
-  inset: 7px;
+.text-intro h1 {
+color: var(--color-primary);
 }
 
-.button:before {
-  border: 4px solid var(--secondary-color);
-  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
-    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
-}
-
-.button:after {
-  border: 4px solid var(--secondary-color);
-  transform: scale(1.3);
-  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
-    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  opacity: 0;
-}
-
-.button:hover:before,
-.button:focus:before {
-  opacity: 0;
-  transform: scale(0.7);
-  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
-    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-
-.button:hover:after,
-.button:focus:after {
-  opacity: 1;
-  transform: scale(1);
-  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
-    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
-}
-
-.button-box {
-  display: flex;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: transform 0.4s ease;
-}
-
-.button-elem {
-  display: block;
-  width: 20px;
-  height: 20px;
-  margin: 17px 18px 0 18px;
-  transform: rotate(180deg);
-  fill: #ffff;
-}
-@keyframes bounce {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(5px);
-  } /* Baja 10px */
-  100% {
-    transform: translateY(0);
-  } /* Vuelve a la posición original */
-}
-.button:hover .button-box,
-.button:focus .button-box {
-  animation: bounce 0.8s ease-in-out;
-}
-.rotate-down {
-  transform: rotate(270deg);
-}
 @media only screen and (max-width: 600px) {
   .hero-section {
     display: flex;
