--- a/src/styles/informationMovil.css
+++ b/src/styles/informationMovil.css
@@ -15,19 +15,16 @@
     display: none;
   }
   .card {
-    margin-top: 10%;
-    margin: 0 auto;
-    place-content: center;
-    position: relative;
-    width: 90%;
-    height: 65%;
-    background-image: url("../assets/cactus.jpg");
+
     background-size: cover;
     border-radius: 10px;
     display: flex;
     overflow: hidden;
     box-shadow: 0 0 0 4px #dd6e42;
-    transition: all 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+ 
+       animation: reveal linear both;
+  animation-timeline: view();
+ animation-range: entry 20% cover 40%;
   }
 
   .card svg {
@@ -57,5 +54,15 @@
     font-size: 16px;
     color: #c0d6df;
     line-height: 1.3;
+  }
+}
+@keyframes reveal{
+  from{
+    opacity: 0;
+  
+  }
+  to{
+    opacity: 1;
+    
   }
 }
