--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -62,7 +62,9 @@
   padding: 5px;
   width: 35vh;
   margin: 0 auto;
-
+    animation: text-intro linear both;
+  animation-timeline: scroll(root block);
+  animation-range: 30vh 50vh ;
 }
 .text-intro p{
   color: var(--color-text);
@@ -79,10 +81,11 @@
     left: 0;
    opacity: 0;
   }
+ 
 }
 @keyframes presentation{
 to{
-      font-size: 0px;
+     font-size: 0px;
     width: 0;
 }
 }
@@ -93,7 +96,6 @@ to{
     height: 10vh;
   }
 }
-
 @keyframes title-header{
   to{
  
