agregando react-icons como dependencia; actualizando estilos y estructura en componentes Intro y App

--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,9 @@
 }
 * {
   font-family: "Poppins", sans-serif;
+  text-decoration: none;
 }
 body {
   margin: 0;
   background-color: var(--background-color-page);
-
 }
-
-
