--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -1,7 +1,7 @@
 .intro {
   display: flex;
   flex-direction: column;
-  justify-content:center;
+  justify-content: center;
   overflow: hidden;
   height: 100dvh;
   height: 100vh; /* fallback para navegadores antiguos */
@@ -11,157 +11,183 @@
   height: 100dvh;
   width: 100%;
   object-fit: cover;
-   inset: 0;
+  inset: 0;
   z-index: 1;
   animation: presentation linear both;
   animation-timeline: scroll(root block);
   animation-range: 0 50vh;
 }
-.photo-movil{
+.photo-movil {
   display: none;
 }
 .text-intro {
-    position:fixed;
-    background-color: rgba(32, 32, 32, 0.648);
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    top: 0;
-    left: 0;
-    height: 100dvh;
-    width: 100%;
-    z-index: 3;
-    animation: enhance-intro linear both;
-    animation-timeline: scroll(root block);
-    animation-range: 0 90vh ;
+  position: fixed;
+  background-color: rgba(32, 32, 32, 0.648);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  top: 0;
+  left: 0;
+  height: 100dvh;
+  width: 100%;
+  z-index: 3;
+  animation: enhance-intro linear both;
+  animation-timeline: scroll(root block);
+  animation-range: 0 90vh;
 }
-.text-presentation{
+.text-presentation {
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
   position: relative;
   animation: hide-text linear both;
   animation-timeline: scroll(root block);
-  animation-range: 0 37vh ;
-  width: 100%; 
+  animation-range: 30.5vh 30vh;
+  width: 100%;
 }
 
 .text-presentation::before {
   content: "";
   position: absolute;
   height: 90%;
-  width: 1px; 
-  background-color: var(--color-text); 
+  width: 1px;
+  background-color: var(--color-text);
   left: 50%;
   transform: translateX(-50%);
   z-index: 1;
 }
-.text-intro h1 {
+.text-intro strong {
   color: var(--color-primary);
   padding: 5px;
-  margin: 0 ;
-  animation: presentation linear both;
-  animation-timeline: scroll(root block);
-  animation-range: 0 40vh ;
+  margin: 0;
   margin-right: 30%;
-}
-.text-intro p{
-  color: var(--color-text);
+  font-size: 20px;
   animation: presentation linear both;
   animation-timeline: scroll(root block);
-  animation-range: 0 35vh ;     /*esto se hace mas angosto apartir de 40vh*/
+  animation-range: 0 40vh;
+}
+.text-intro p {
+  color: var(--color-text);
   padding: 5px;
-  margin: 0 ;
+  margin: 0;
   margin-left: 30%;
-}
-.main-title{
-  font-size: 0;
-  animation: title-main linear both;
+  font-size: 20px;
+  animation: presentation linear both;
   animation-timeline: scroll(root block);
-  animation-range: 0 85vh;
+  animation-range: 0 35vh;
+}
+hr {
+  display: none;
+}
+.icon-presentation {
+  display: flex;
+  gap: 5dvh;
+}
+.icon {
+  padding: 5px;
+  background-color: var(--color-text);
+  border-radius: 10dvh;
+  width: 4dvh;
+  height: 4dvh;
+  transition: 0.2s;
+  -webkit-box-reflect: below 10px linear-gradient(transparent, #c2c2c255);
+  animation: icon-reflect linear both;
+  animation-timeline: scroll(root block);
+  animation-range: 0vh 35vh;
+}
+a {
+  color: black;
+  padding: 0;
+  margin: 0;
 }
 
-@keyframes title-main{
-  to{
-    font-size: 16px;
-    color: var(--color-text);
-    text-align: center;
-    width: 100%;
+.icon:hover {
+  color: var(--color-primary);
+  transition: 0.2s;
+}
+@keyframes icon-reflect {
+  to {
+    -webkit-box-reflect: below 0px linear-gradient(transparent, transparent);
   }
 }
-@keyframes text-intro{
-  to{
+@keyframes text-intro {
+  to {
     left: 0;
-   opacity: 0;
+    opacity: 0;
   }
 }
-@keyframes presentation{
-to{
-     font-size: 0px;
-
-      opacity: 0;
-    
+@keyframes presentation {
+  to {
+    font-size: 0px;
+    opacity: 0;
+  }
 }
-}
-@keyframes enhance-intro{
-  to{
+@keyframes enhance-intro {
+  to {
     background: rgba(10, 10, 10, 0.503);
     backdrop-filter: blur(5px);
     height: 10vh;
   }
 }
-@keyframes hide-text{
-  to{
+@keyframes hide-text {
+  to {
+    height: 0;
     display: none;
   }
 }
 
 @media only screen and (max-width: 600px) {
- .text-intro {
-    gap: 15px;      
+  .text-intro {
+    gap: 15px;
   }
-  .photo{
+  .photo {
     display: none;
   }
-  .photo-movil{
+  .photo-movil {
     display: inline;
-  position: fixed;
-  height: 100dvh;
-  width: 100%;
-  object-fit: cover;
-   inset: 0;
-  z-index: 1;
-  animation: presentation linear both;
-  animation-timeline: scroll(root block);
-  animation-range: 0 50vh;
+    position: fixed;
+    height: 100dvh;
+    width: 100%;
+    object-fit: cover;
+    inset: 0;
+    z-index: 1;
+    animation: presentation linear both;
+    animation-timeline: scroll(root block);
+    animation-range: 0 50vh;
   }
-.text-presentation{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  position: relative;
-  animation: hide-text linear both;
-  animation-timeline: scroll(root block);
-  animation-range: 0 37vh ;
-  
-}
-  .text-intro h1 {
+
+  .text-presentation {
+    display: grid;
+    grid-template-columns: 1fr;
+    position: relative;
+    animation: hide-text linear both;
+    animation-timeline: scroll(root block);
+    animation-range: 0 37vh;
+  }
+  .text-presentation::before {
+    display: none;
+  }
+  hr {
+    display: inline;
+    width: 20%;
+    margin: 0;
+    height: 1px;
+    border: none;
+    background-color: var(--color-text);
+    animation: hide-text linear both;
+    animation-timeline: scroll(root block);
+    animation-range: 0 30vh;
+  }
+  .text-intro strong {
     width: 100%;
     font-size: 16px;
-    margin: 0; 
-   
+    margin: 0;
   }
 
   .text-intro p {
-    width: 100%;
-    font-size: 14px;
-    margin: 0 ; 
-    
+    display: none;
   }
 }
-
-
-
-
